<resources>
    <string name="app_name">CustomBirthdayApp</string>

    <string name="happy_birthday_kitty_may_this_birthday_bring_you_more_wisdom_strength_and_courage_to_tackle_obstacles_in_life_with_grace_and_truth_proud_of_the_person_you_ve_become_wish_for_all_good_things_to_come_your_way_have_a_blast_while_maintaining_social_distance_to_be_able_to_enjoy_and_be_content_with_solitute_is_a_blessing_many_fail_to_embrace_but_you_have_been_so_strong_and_positive_through_all_that_has_come_your_way_stay_strong_always_lots_and_lots_of_love_from_sriju_and_sidda_happy_birthday_again_3"><![CDATA[Happy Birthday Kitty! May this birthday bring you more wisdom, strength and courage to tackle obstacles in life with grace and truth. Proud of the person you\'ve become. Wish for all good things to come your way. Have a blast while maintaining social distance. To be able to enjoy and be content with solitute is a blessing many fail to embrace. But you have been so strong and positive through all that has come your way. Stay strong always. Lots and lots of love from Sriju and Sidda. Happy Birthday again. <3]]></string>
    <string name="linkToSite">
    <a href="https://www.flipkart.com/">Link to gift.</a>
    </string>
    <string name="i_know_you_wanted_a_good_hair_mask_so_after_hours_of_research_and_youtube_reviews_i_have_found_an_sls_and_paraben_free_highly_reveiwed_hair_mask_that_s_gonna_leave_your_hair_smelling_like_berries_i_hope_your_hair_feels_supreme_after_using_this">I know you wanted a good hair mask. So after hours of research and YouTube reviews, I have found an sls and paraben free highly reveiwed hair mask that\'s gonna leave your hair smelling like berries. I hope your hair feels supreme after using this.</string>
    <string name="you_are_going_to_loveee_this">You are going to loveee this!</string>
    <string name="happy_birthday">HAPPY BIRTHDAY!</string>
    <string name="press_me_first">Press me first</string>
    <string name="as_sweet_as_you">As Sweet as you</string>
    <string name="surprise">Surprise</string>
    <string name="_24th_may_2021">24th May, 2021</string>
    <string name="how_about_that">How about that?</string>
    <string name="it_s_small_though_you_can_look_at_him_as_soon_as_you_wake_up_now_i_know_you_would_ve_wanted_sasuke_as_well_but_wait_for_the_next_gift_ps_it_s_not_an_action_figure_of_sasuke">It\'s small though. You can look at him as soon as you wake up now. I know you would\'ve wanted Sasuke as well but wait for the next gift.PS: It\'s not an action figure of sasuke.</string>

</resources>